# Lib_Database_TodoApp

./: .env  Cargo.toml  docker-compose.yml
migrations/2023-07-11-142019_todos/: down.sql  up.sql
migrations/2023-07-11-145315_session/: up.sql
migrations/2023-07-11-174749_add_email_verfefied/: up.sql
migrations/2023-07-11-181622_add_email_Verify_token/: down.sql  up.sql
migrations/2023-07-11-182419_add_field_emails_tokens/: down.sql  up.sql
src/: lib.rs  models.rs  ops.rs  schema.rs
